Fix jump bg 5

--- a/src/App.css
+++ b/src/App.css
@@ -64,6 +64,7 @@
   background-size: cover;
   background-position: 50% 50%;
   background-attachment: fixed;
+  will-change: transform;
   transition: 1s;
 }
 
@@ -75,6 +76,7 @@
   /* background: #edededc7; */
   /* background: radial-gradient(#ededede3 50%, transparent); */
   background-attachment: fixed;
+  will-change: transform;
   background: linear-gradient(125deg, #edededde 65%, transparent);
 }
 
